--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="layout">
         <header class="header">
             <div class="logo">
-                <span> S </span>
+                <span class="icon"> S </span>
                 <h1> BLOG </h1>
             </div>
             <nav class="menu">
@@ -28,27 +28,27 @@
             </div>
             <section class="tags">
                 <div class="tag">
-                    <span> a </span>
+                    <span class="icon"> a </span>
                     <h1> Desarrollo Web </h1>
                     <p> Aprende los principas lenguajes para desarrollar webs ¡Conviertete en un webmaster! </p>
                 </div>
                 <div class="tag">
-                    <span> a </span>
+                    <span class="icon"> a </span>
                     <h1> Sistemas Operativos </h1>
                     <p> Aprende a administrar sistemas Linux y Windows </p>
                 </div>
                 <div class="tag">
-                    <span> a </span>
+                    <span class="icon"> a </span>
                     <h1> Hardware </h1>
                     <p> Conoce los entresijos del hardware </p>
                 </div>
                 <div class="tag">
-                    <span> a </span>
+                    <span class="icon"> a </span>
                     <h1> Redes e Internet </h1>
                     <p> Aprende a configurar y adminitrar redes informáticas y servidores </p>
                 </div>
                 <div class="tag">
-                    <span> a </span>
+                    <span class="icon"> a </span>
                     <h1> Bases de datos </h1>
                     <p> Aprende a montar y adminitrar bases de datos </p>
                 </div>
