--- a/index.html
+++ b/index.html
@@ -24,26 +24,28 @@
         </header>
         <section class="content">
             <div class="banner">
-                <h1> CURSOS DE DESARROLLO WEB - APRENDIENDO A MAQUETAR </h1>
+                <div class="bakbanner">
+                    <h1> CURSOS DE DESARROLLO WEB - APRENDIENDO A MAQUETAR </h1>
+                </div>
             </div>
             <section class="tags">
                 <div class="tag">
-                    <span class="icon"> a </span>
+                    <span class="icon"> H </span>
                     <h1> Desarrollo Web </h1>
                     <p> Aprende los principas lenguajes para desarrollar webs ¡Conviertete en un webmaster! </p>
                 </div>
                 <div class="tag">
-                    <span class="icon"> a </span>
+                    <span class="icon"> _ </span>
                     <h1> Sistemas Operativos </h1>
                     <p> Aprende a administrar sistemas Linux y Windows </p>
                 </div>
                 <div class="tag">
-                    <span class="icon"> a </span>
+                    <span class="icon"> S </span>
                     <h1> Hardware </h1>
                     <p> Conoce los entresijos del hardware </p>
                 </div>
                 <div class="tag">
-                    <span class="icon"> a </span>
+                    <span class="icon"> u </span>
                     <h1> Redes e Internet </h1>
                     <p> Aprende a configurar y adminitrar redes informáticas y servidores </p>
                 </div>
