--- a/index.html
+++ b/index.html
@@ -55,33 +55,33 @@
                     <p> Aprende a montar y adminitrar bases de datos </p>
                 </div>
             </section>
-            <section class="content">
+            <section class="main">
                 <div class="articles">
                     <h1> ULTIMOS ARTICULOS </h1>
                     <article class="article">
                         <div class="fecha"> <p> Fecha: 25 nov  Categoría: Prueba </p> </div>
                         <h1> Titulo del Artículo </h1>
-                        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, error ratione? Minima tenetur fugit non eveniet, delectus sed, consequuntur aliquid dolor, alias tempore neque assumenda perferendis dolorum corrupti maiores modi amet! Magnam praesentium a, error maiores quibusdam facere, numquam nam veritatis, architecto ex ea. Numquam reprehenderit cumque fugit voluptatibus laboriosam. </p>
+                        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore repellat at doloribus iste nobis fugit laboriosam amet non explicabo magni repellendus illum adipisci quod voluptatibus nulla doloremque, iure ad, nisi consequatur atque. Possimus iste neque quia illo numquam nisi assumenda! <span> Leer mas </span></p>
                     </article>
                     <article class="article">
                         <div class="fecha"> <p> Fecha: 25 nov  Categoría: Prueba </p> </div>
                         <h1> Titulo del Artículo </h1>
-                        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, error ratione? Minima tenetur fugit non eveniet, delectus sed, consequuntur aliquid dolor, alias tempore neque assumenda perferendis dolorum corrupti maiores modi amet! Magnam praesentium a, error maiores quibusdam facere, numquam nam veritatis, architecto ex ea. Numquam reprehenderit cumque fugit voluptatibus laboriosam. </p>
+                        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore repellat at doloribus iste nobis fugit laboriosam amet non explicabo magni repellendus illum adipisci quod voluptatibus nulla doloremque, iure ad, nisi consequatur atque. Possimus iste neque quia illo numquam nisi assumenda! <span> Leer mas </span></p>
                     </article>
                     <article class="article">
                         <div class="fecha"> <p> Fecha: 25 nov  Categoría: Prueba </p> </div>
                         <h1> Titulo del Artículo </h1>
-                        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, error ratione? Minima tenetur fugit non eveniet, delectus sed, consequuntur aliquid dolor, alias tempore neque assumenda perferendis dolorum corrupti maiores modi amet! Magnam praesentium a, error maiores quibusdam facere, numquam nam veritatis, architecto ex ea. Numquam reprehenderit cumque fugit voluptatibus laboriosam. </p>
+                        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore repellat at doloribus iste nobis fugit laboriosam amet non explicabo magni repellendus illum adipisci quod voluptatibus nulla doloremque, iure ad, nisi consequatur atque. Possimus iste neque quia illo numquam nisi assumenda! <span> Leer mas </span></p>
                     </article>
                     <article class="article">
                         <div class="fecha"> <p> Fecha: 25 nov  Categoría: Prueba </p> </div>
                         <h1> Titulo del Artículo </h1>
-                        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, error ratione? Minima tenetur fugit non eveniet, delectus sed, consequuntur aliquid dolor, alias tempore neque assumenda perferendis dolorum corrupti maiores modi amet! Magnam praesentium a, error maiores quibusdam facere, numquam nam veritatis, architecto ex ea. Numquam reprehenderit cumque fugit voluptatibus laboriosam. </p>
+                        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore repellat at doloribus iste nobis fugit laboriosam amet non explicabo magni repellendus illum adipisci quod voluptatibus nulla doloremque, iure ad, nisi consequatur atque. Possimus iste neque quia illo numquam nisi assumenda! <span> Leer mas </span></p>
                     </article>
                     <article class="article">
                         <div class="fecha"> <p> Fecha: 25 nov  Categoría: Prueba </p> </div>
                         <h1> Titulo del Artículo </h1>
-                        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, error ratione? Minima tenetur fugit non eveniet, delectus sed, consequuntur aliquid dolor, alias tempore neque assumenda perferendis dolorum corrupti maiores modi amet! Magnam praesentium a, error maiores quibusdam facere, numquam nam veritatis, architecto ex ea. Numquam reprehenderit cumque fugit voluptatibus laboriosam. </p>
+                        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore repellat at doloribus iste nobis fugit laboriosam amet non explicabo magni repellendus illum adipisci quod voluptatibus nulla doloremque, iure ad, nisi consequatur atque. Possimus iste neque quia illo numquam nisi assumenda! <span> Leer mas </span></p>
                     </article>
                 </div>
                 <div class="lateral">
@@ -90,7 +90,7 @@
                         <div class="buscador">
                             <input type="text">
                             <div class="icon">
-                                a
+                                L
                             </div>
                         </div>
                     </section>
@@ -98,40 +98,19 @@
                         <h1> LOGIN </h1>
                         <div class="content">
                             <form>
-                                <div class="icon">
-                                    a
+                                <div class="icon userIcon">
+                                    U
                                 </div>
                                 <input type="text">
-                                <div class="icon">
-                                    a
+                                <div class="icon pasdIcon">
+                                    w
                                 </div>
                                 <input type="text">
-                                <input type="submit" value="Entrar">
+                                <input type="button" value="Entrar">
                                 <input type="button" value="Limpiar">
                             </form>
                             <span> Regístrate <a href="#"> aquí </a> </span>
                             <span> <a href="#"> ¿Has olvidado tu contraseña? </a> </span>
-                        </div>
-                    </section>
-                    <section class="redes">
-                        <h1> REDES SOCIALES </h1>
-                        <div class="content">
-                            <div class="item">
-                                <div class="icon">a</div>
-                                <h1> Twitter </h1>
-                            </div>
-                            <div class="item">
-                                <div class="icon">a</div>
-                                <h1> FaceBook </h1>
-                            </div>
-                            <div class="item">
-                                <div class="icon">a</div>
-                                <h1> Google </h1>
-                            </div>
-                            <div class="item">
-                                <div class="icon">a</div>
-                                <h1> Youtube </h1>
-                            </div>
                         </div>
                     </section>
                 </div>
